// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiColorPalettePicker is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value=""
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected custom text 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="custom"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: Plain text as a custom option, is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        >
          Plain text as a custom option
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected fixed palette 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="paletteFixed"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: 
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)"
          />
          , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        >
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)"
          />
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="paletteLinear"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: 
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #1fb0b2 0%, #ffdb6d 25%, #ee9191 50%, #ffffff 75%, #888094 100%)"
          />
          , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        >
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #1fb0b2 0%, #ffdb6d 25%, #ee9191 50%, #ffffff 75%, #888094 100%)"
          />
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette with stops 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="paletteLinearStops"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: 
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #54B399 0%, #D36086 53%, #9170B8 74%, #F5A700 100%)"
          />
          , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        >
          <div
            class="euiColorPalettePicker__itemGradient"
            style="background:linear-gradient(to right, #54B399 0%, #D36086 53%, #9170B8 74%, #F5A700 100%)"
          />
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with the prop selectionDisplay set as title  1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="paletteFixed"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: Palette 1, is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        >
          Palette 1
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker more props are propagated to each option 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="1"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: 
          <div
            class="euiColorPalettePicker__itemGradient"
          />
          , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          aria-selected="true"
          class="euiSuperSelectControl euiSuperSelect--isOpen__button"
          data-test-subj="colorPalettePicker"
          role="option"
          type="button"
        >
          <div
            class="euiColorPalettePicker__itemGradient"
          />
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <div
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker more props are propagated to each option 2`] = `
<EuiColorPalettePicker
  data-test-subj="colorPalettePicker"
  onChange={[Function]}
  palettes={
    Array [
      Object {
        "palette": Array [
          "#1fb0b2",
          "#ffdb6d",
          "#ee9191",
          "#ffffff",
          "#888094",
        ],
        "title": "Fixed Palette",
        "type": "fixed",
        "value": "1",
      },
      Object {
        "data-test-subj": "custom option",
        "title": "Plain text as a custom option",
        "type": "text",
        "value": "2",
      },
    ]
  }
  valueOfSelected="1"
>
  <EuiSuperSelect
    compressed={false}
    data-test-subj="colorPalettePicker"
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    isLoading={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "dropdownDisplay": <div
            className="euiColorPalettePicker__item"
          >
            <div
              className="euiColorPalettePicker__itemTitle"
            >
              Fixed Palette
            </div>
            <div
              className="euiColorPalettePicker__itemGradient"
              style={
                Object {
                  "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                }
              }
            />
          </div>,
          "inputDisplay": <div
            className="euiColorPalettePicker__itemGradient"
            style={
              Object {
                "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
              }
            }
          />,
          "value": "1",
        },
        Object {
          "dropdownDisplay": <div
            className="euiColorPalettePicker__item"
          >
            Plain text as a custom option
          </div>,
          "inputDisplay": "Plain text as a custom option",
          "value": "2",
        },
      ]
    }
    readOnly={false}
    valueOfSelected="1"
  >
    <EuiPopover
      anchorPosition="downCenter"
      button={
        <EuiSuperSelectControl
          className="euiSuperSelect--isOpen__button"
          compressed={false}
          data-test-subj="colorPalettePicker"
          fullWidth={false}
          isInvalid={false}
          isLoading={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          options={
            Array [
              Object {
                "dropdownDisplay": <div
                  className="euiColorPalettePicker__item"
                >
                  <div
                    className="euiColorPalettePicker__itemTitle"
                  >
                    Fixed Palette
                  </div>
                  <div
                    className="euiColorPalettePicker__itemGradient"
                    style={
                      Object {
                        "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                      }
                    }
                  />
                </div>,
                "inputDisplay": <div
                  className="euiColorPalettePicker__itemGradient"
                  style={
                    Object {
                      "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                    }
                  }
                />,
                "value": "1",
              },
              Object {
                "dropdownDisplay": <div
                  className="euiColorPalettePicker__item"
                >
                  Plain text as a custom option
                </div>,
                "inputDisplay": "Plain text as a custom option",
                "value": "2",
              },
            ]
          }
          readOnly={false}
          value="1"
        />
      }
      className="euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={false}
      isOpen={true}
      ownFocus={false}
      panelClassName="euiSuperSelect__popoverPanel"
      panelPaddingSize="none"
      popoverRef={[Function]}
    >
      <EuiOutsideClickDetector
        isDisabled={false}
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiSuperSelectControl
              className="euiSuperSelect--isOpen__button"
              compressed={false}
              data-test-subj="colorPalettePicker"
              fullWidth={false}
              isInvalid={false}
              isLoading={false}
              onClick={[Function]}
              onKeyDown={[Function]}
              options={
                Array [
                  Object {
                    "dropdownDisplay": <div
                      className="euiColorPalettePicker__item"
                    >
                      <div
                        className="euiColorPalettePicker__itemTitle"
                      >
                        Fixed Palette
                      </div>
                      <div
                        className="euiColorPalettePicker__itemGradient"
                        style={
                          Object {
                            "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                          }
                        }
                      />
                    </div>,
                    "inputDisplay": <div
                      className="euiColorPalettePicker__itemGradient"
                      style={
                        Object {
                          "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                        }
                      }
                    />,
                    "value": "1",
                  },
                  Object {
                    "dropdownDisplay": <div
                      className="euiColorPalettePicker__item"
                    >
                      Plain text as a custom option
                    </div>,
                    "inputDisplay": "Plain text as a custom option",
                    "value": "2",
                  },
                ]
              }
              readOnly={false}
              value="1"
            >
              <input
                type="hidden"
                value="1"
              />
              <EuiFormControlLayout
                compressed={false}
                fullWidth={false}
                icon={
                  Object {
                    "side": "right",
                    "type": "arrowDown",
                  }
                }
                isLoading={false}
              >
                <div
                  className="euiFormControlLayout"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <EuiScreenReaderOnly>
                      <span
                        className="euiScreenReaderOnly"
                        id="generated-id"
                      >
                        <EuiI18n
                          default="Select an option: {selectedValue}, is selected"
                          token="euiSuperSelectControl.selectAnOption"
                          values={
                            Object {
                              "selectedValue": <div
                                className="euiColorPalettePicker__itemGradient"
                                style={
                                  Object {
                                    "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                                  }
                                }
                              />,
                            }
                          }
                        >
                          <Component
                            selectedValue={
                              <div
                                className="euiColorPalettePicker__itemGradient"
                                style={
                                  Object {
                                    "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                                  }
                                }
                              />
                            }
                          >
                            Select an option: 
                            <div
                              className="euiColorPalettePicker__itemGradient"
                              key="1"
                              style={
                                Object {
                                  "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                                }
                              }
                            />
                            , is selected
                          </Component>
                        </EuiI18n>
                      </span>
                    </EuiScreenReaderOnly>
                    <button
                      aria-haspopup="true"
                      aria-labelledby="undefined generated-id"
                      aria-selected={true}
                      className="euiSuperSelectControl euiSuperSelect--isOpen__button"
                      data-test-subj="colorPalettePicker"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      role="option"
                      type="button"
                    >
                      <div
                        className="euiColorPalettePicker__itemGradient"
                        style={
                          Object {
                            "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                          }
                        }
                      />
                    </button>
                    <EuiFormControlLayoutIcons
                      icon={
                        Object {
                          "side": "right",
                          "type": "arrowDown",
                        }
                      }
                      isLoading={false}
                    >
                      <div
                        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                      >
                        <EuiFormControlLayoutCustomIcon
                          type="arrowDown"
                        >
                          <span
                            className="euiFormControlLayoutCustomIcon"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFormControlLayoutCustomIcon__icon"
                              type="arrowDown"
                            >
                              <div
                                aria-hidden="true"
                                className="euiFormControlLayoutCustomIcon__icon"
                                data-euiicon-type="arrowDown"
                              />
                            </EuiIcon>
                          </span>
                        </EuiFormControlLayoutCustomIcon>
                      </div>
                    </EuiFormControlLayoutIcons>
                  </div>
                </div>
              </EuiFormControlLayout>
            </EuiSuperSelectControl>
          </div>
          <EuiPortal>
            <Portal
              containerInfo={
                <div>
                  <div>
                    <div
                      data-focus-guard="true"
                      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        aria-describedby="generated-id"
                        aria-live="assertive"
                        aria-modal="true"
                        class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                        role="dialog"
                        style="top: 8px; left: -22px; z-index: 2000;"
                      >
                        <div
                          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
                        />
                        <div>
                          <p
                            class="euiScreenReaderOnly"
                            role="alert"
                          >
                            You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
                          </p>
                          <div
                            aria-activedescendant="1"
                            class="euiSuperSelect__listbox"
                            role="listbox"
                            tabindex="0"
                          >
                            <button
                              aria-selected="true"
                              class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                              id="1"
                              role="option"
                              type="button"
                            >
                              <span
                                class="euiContextMenu__itemLayout"
                              >
                                <div
                                  class="euiContextMenu__icon"
                                  data-euiicon-type="check"
                                />
                                <span
                                  class="euiContextMenuItem__text"
                                >
                                  <div
                                    class="euiColorPalettePicker__item"
                                  >
                                    <div
                                      class="euiColorPalettePicker__itemTitle"
                                    >
                                      Fixed Palette
                                    </div>
                                    <div
                                      class="euiColorPalettePicker__itemGradient"
                                    />
                                  </div>
                                </span>
                              </span>
                            </button>
                            <button
                              aria-selected="false"
                              class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                              id="2"
                              role="option"
                              type="button"
                            >
                              <span
                                class="euiContextMenu__itemLayout"
                              >
                                <div
                                  class="euiContextMenu__icon"
                                  data-euiicon-type="empty"
                                />
                                <span
                                  class="euiContextMenuItem__text"
                                >
                                  <div
                                    class="euiColorPalettePicker__item"
                                  >
                                    Plain text as a custom option
                                  </div>
                                </span>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                      tabindex="-1"
                    />
                  </div>
                </div>
              }
            >
              <EuiFocusTrap
                clickOutsideDisables={true}
                disabled={true}
                returnFocus={true}
              >
                <EuiOutsideClickDetector
                  isDisabled={true}
                  onOutsideClick={[Function]}
                >
                  <OutsideEventDetector
                    handleEvent={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                    >
                      <FocusLock
                        as="div"
                        autoFocus={true}
                        disabled={true}
                        lockProps={
                          Object {
                            "style": undefined,
                          }
                        }
                        noFocusGuards={false}
                        persistentFocus={false}
                        returnFocus={true}
                      >
                        <div
                          data-focus-guard={true}
                          key="guard-first"
                          style={
                            Object {
                              "height": "0px",
                              "left": "1px",
                              "overflow": "hidden",
                              "padding": 0,
                              "position": "fixed",
                              "top": "1px",
                              "width": "1px",
                            }
                          }
                          tabIndex={-1}
                        />
                        <div
                          data-focus-guard={true}
                          key="guard-nearest"
                          style={
                            Object {
                              "height": "0px",
                              "left": "1px",
                              "overflow": "hidden",
                              "padding": 0,
                              "position": "fixed",
                              "top": "1px",
                              "width": "1px",
                            }
                          }
                          tabIndex={-1}
                        />
                        <div
                          data-focus-lock-disabled="disabled"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <SideEffect(FocusWatcher)
                            autoFocus={true}
                            disabled={true}
                            observed={
                              <div
                                data-focus-lock-disabled="disabled"
                              >
                                <div
                                  aria-describedby="generated-id"
                                  aria-live="assertive"
                                  aria-modal="true"
                                  class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                                  role="dialog"
                                  style="top: 8px; left: -22px; z-index: 2000;"
                                >
                                  <div
                                    class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
                                  />
                                  <div>
                                    <p
                                      class="euiScreenReaderOnly"
                                      role="alert"
                                    >
                                      You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
                                    </p>
                                    <div
                                      aria-activedescendant="1"
                                      class="euiSuperSelect__listbox"
                                      role="listbox"
                                      tabindex="0"
                                    >
                                      <button
                                        aria-selected="true"
                                        class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                        id="1"
                                        role="option"
                                        type="button"
                                      >
                                        <span
                                          class="euiContextMenu__itemLayout"
                                        >
                                          <div
                                            class="euiContextMenu__icon"
                                            data-euiicon-type="check"
                                          />
                                          <span
                                            class="euiContextMenuItem__text"
                                          >
                                            <div
                                              class="euiColorPalettePicker__item"
                                            >
                                              <div
                                                class="euiColorPalettePicker__itemTitle"
                                              >
                                                Fixed Palette
                                              </div>
                                              <div
                                                class="euiColorPalettePicker__itemGradient"
                                              />
                                            </div>
                                          </span>
                                        </span>
                                      </button>
                                      <button
                                        aria-selected="false"
                                        class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                        id="2"
                                        role="option"
                                        type="button"
                                      >
                                        <span
                                          class="euiContextMenu__itemLayout"
                                        >
                                          <div
                                            class="euiContextMenu__icon"
                                            data-euiicon-type="empty"
                                          />
                                          <span
                                            class="euiContextMenuItem__text"
                                          >
                                            <div
                                              class="euiColorPalettePicker__item"
                                            >
                                              Plain text as a custom option
                                            </div>
                                          </span>
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            }
                            onActivation={[Function]}
                            onDeactivation={[Function]}
                            persistentFocus={false}
                          >
                            <FocusWatcher
                              autoFocus={true}
                              disabled={true}
                              observed={
                                <div
                                  data-focus-lock-disabled="disabled"
                                >
                                  <div
                                    aria-describedby="generated-id"
                                    aria-live="assertive"
                                    aria-modal="true"
                                    class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                                    role="dialog"
                                    style="top: 8px; left: -22px; z-index: 2000;"
                                  >
                                    <div
                                      class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
                                    />
                                    <div>
                                      <p
                                        class="euiScreenReaderOnly"
                                        role="alert"
                                      >
                                        You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
                                      </p>
                                      <div
                                        aria-activedescendant="1"
                                        class="euiSuperSelect__listbox"
                                        role="listbox"
                                        tabindex="0"
                                      >
                                        <button
                                          aria-selected="true"
                                          class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                          id="1"
                                          role="option"
                                          type="button"
                                        >
                                          <span
                                            class="euiContextMenu__itemLayout"
                                          >
                                            <div
                                              class="euiContextMenu__icon"
                                              data-euiicon-type="check"
                                            />
                                            <span
                                              class="euiContextMenuItem__text"
                                            >
                                              <div
                                                class="euiColorPalettePicker__item"
                                              >
                                                <div
                                                  class="euiColorPalettePicker__itemTitle"
                                                >
                                                  Fixed Palette
                                                </div>
                                                <div
                                                  class="euiColorPalettePicker__itemGradient"
                                                />
                                              </div>
                                            </span>
                                          </span>
                                        </button>
                                        <button
                                          aria-selected="false"
                                          class="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                          id="2"
                                          role="option"
                                          type="button"
                                        >
                                          <span
                                            class="euiContextMenu__itemLayout"
                                          >
                                            <div
                                              class="euiContextMenu__icon"
                                              data-euiicon-type="empty"
                                            />
                                            <span
                                              class="euiContextMenuItem__text"
                                            >
                                              <div
                                                class="euiColorPalettePicker__item"
                                              >
                                                Plain text as a custom option
                                              </div>
                                            </span>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              }
                              onActivation={[Function]}
                              onDeactivation={[Function]}
                              persistentFocus={false}
                            />
                          </SideEffect(FocusWatcher)>
                          <EuiPanel
                            aria-describedby="generated-id"
                            aria-live="assertive"
                            aria-modal="true"
                            className="euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                            paddingSize="none"
                            panelRef={[Function]}
                            role="dialog"
                            style={
                              Object {
                                "left": -22,
                                "top": 8,
                                "zIndex": 2000,
                              }
                            }
                          >
                            <div
                              aria-describedby="generated-id"
                              aria-live="assertive"
                              aria-modal="true"
                              className="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                              role="dialog"
                              style={
                                Object {
                                  "left": -22,
                                  "top": 8,
                                  "zIndex": 2000,
                                }
                              }
                            >
                              <div
                                className="euiPopover__panelArrow euiPopover__panelArrow--bottom"
                              />
                              <EuiMutationObserver
                                observerOptions={
                                  Object {
                                    "attributes": true,
                                    "characterData": true,
                                    "childList": true,
                                    "subtree": true,
                                  }
                                }
                                onMutation={[Function]}
                              >
                                <div>
                                  <EuiScreenReaderOnly>
                                    <p
                                      className="euiScreenReaderOnly"
                                      role="alert"
                                    >
                                      <EuiI18n
                                        default="You are in a form selector of {optionsCount} items and must select a single option. Use the up and down keys to navigate or escape to close."
                                        token="euiSuperSelect.screenReaderAnnouncement"
                                        values={
                                          Object {
                                            "optionsCount": 2,
                                          }
                                        }
                                      >
                                        You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
                                      </EuiI18n>
                                    </p>
                                  </EuiScreenReaderOnly>
                                  <div
                                    aria-activedescendant="1"
                                    className="euiSuperSelect__listbox"
                                    role="listbox"
                                    style={
                                      Object {
                                        "width": undefined,
                                      }
                                    }
                                    tabIndex={0}
                                  >
                                    <EuiContextMenuItem
                                      aria-selected={true}
                                      buttonRef={[Function]}
                                      className="euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                      icon="check"
                                      id="1"
                                      key="0"
                                      onClick={[Function]}
                                      onKeyDown={[Function]}
                                      role="option"
                                    >
                                      <button
                                        aria-selected={true}
                                        className="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                        id="1"
                                        onClick={[Function]}
                                        onKeyDown={[Function]}
                                        role="option"
                                        type="button"
                                      >
                                        <span
                                          className="euiContextMenu__itemLayout"
                                        >
                                          <EuiIcon
                                            className="euiContextMenu__icon"
                                            size="m"
                                            type="check"
                                          >
                                            <div
                                              className="euiContextMenu__icon"
                                              data-euiicon-type="check"
                                              size="m"
                                            />
                                          </EuiIcon>
                                          <span
                                            className="euiContextMenuItem__text"
                                          >
                                            <div
                                              className="euiColorPalettePicker__item"
                                            >
                                              <div
                                                className="euiColorPalettePicker__itemTitle"
                                              >
                                                Fixed Palette
                                              </div>
                                              <div
                                                className="euiColorPalettePicker__itemGradient"
                                                style={
                                                  Object {
                                                    "background": "linear-gradient(to right, #1fb0b2 0%, #1fb0b2 20%, #ffdb6d 20%, #ffdb6d 40%, #ee9191 40%, #ee9191 60%, #ffffff 60%, #ffffff 80%, #888094 80%, #888094 100%)",
                                                  }
                                                }
                                              />
                                            </div>
                                          </span>
                                        </span>
                                      </button>
                                    </EuiContextMenuItem>
                                    <EuiContextMenuItem
                                      aria-selected={false}
                                      buttonRef={[Function]}
                                      className="euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                      icon="empty"
                                      id="2"
                                      key="1"
                                      onClick={[Function]}
                                      onKeyDown={[Function]}
                                      role="option"
                                    >
                                      <button
                                        aria-selected={false}
                                        className="euiContextMenuItem euiSuperSelect__item euiSuperSelect__item--hasDividers"
                                        id="2"
                                        onClick={[Function]}
                                        onKeyDown={[Function]}
                                        role="option"
                                        type="button"
                                      >
                                        <span
                                          className="euiContextMenu__itemLayout"
                                        >
                                          <EuiIcon
                                            className="euiContextMenu__icon"
                                            size="m"
                                            type="empty"
                                          >
                                            <div
                                              className="euiContextMenu__icon"
                                              data-euiicon-type="empty"
                                              size="m"
                                            />
                                          </EuiIcon>
                                          <span
                                            className="euiContextMenuItem__text"
                                          >
                                            <div
                                              className="euiColorPalettePicker__item"
                                            >
                                              Plain text as a custom option
                                            </div>
                                          </span>
                                        </span>
                                      </button>
                                    </EuiContextMenuItem>
                                  </div>
                                </div>
                              </EuiMutationObserver>
                            </div>
                          </EuiPanel>
                        </div>
                        <div
                          data-focus-guard={true}
                          style={
                            Object {
                              "height": "0px",
                              "left": "1px",
                              "overflow": "hidden",
                              "padding": 0,
                              "position": "fixed",
                              "top": "1px",
                              "width": "1px",
                            }
                          }
                          tabIndex={-1}
                        />
                      </FocusLock>
                    </div>
                  </OutsideEventDetector>
                </EuiOutsideClickDetector>
              </EuiFocusTrap>
            </Portal>
          </EuiPortal>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiSuperSelect>
</EuiColorPalettePicker>
`;
